fixed footer spacing

--- a/src/style.css
+++ b/src/style.css
@@ -339,6 +339,7 @@ a:focus {
   height: 640px;
   background-color: #04192B;
   padding-left: 148px;
+  padding-top: 0px;
 
 }
 
@@ -349,6 +350,7 @@ a:focus {
 
 .global-footer-left {
   max-width: 400px;
+  margin-top: 100px;
 }
 
 .global-footer-title {
@@ -359,7 +361,8 @@ a:focus {
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 600;
-  margin: 31px 0;
+  margin-bottom: 31px;
+  margin-top: 31px;
 }
 
 .global-footer-subtext {
